# EerieLeapRT

./: .gitignore  .gitmodules  Dockerfile.dev  README.md  example.docker-compose.yml  review.md  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: devebox_stm32h743_hw_20.conf  devebox_stm32h743_hw_20.overlay  esp32s3_devkitc_procpu.conf  esp32s3_devkitc_procpu.overlay  esp32s3_devkitc_procpu_net.conf  esp32s3_pm_hw_02_procpu.conf  esp32s3_pm_hw_02_procpu.overlay  esp32s3_procpu_net.conf  native_sim.conf  native_sim.overlay  qemu_cortex_a9.conf  qemu_cortex_a9.overlay  qemu_cortex_m3.conf  qemu_cortex_m3.overlay  qemu_x86_64.conf  qemu_x86_64.overlay
app/libs/dbcppp/: CMakeLists.txt
app/libs/dbcppp/src/: AttributeDefinitionImpl.cpp  AttributeDefinitionImpl.h  AttributeImpl.cpp  AttributeImpl.h  BitTimingImpl.cpp  BitTimingImpl.h  DBCAST2Network.cpp  DBCX3.cpp  DBCX3.h  EnvironmentVariableImpl.cpp  EnvironmentVariableImpl.h  Export.h  Helper.h  MessageImpl.cpp  MessageImpl.h  Network2DBC.cpp  Network2Human.cpp  NetworkImpl.cpp  NetworkImpl.h  NodeImpl.cpp  NodeImpl.h  SignalGroupImpl.cpp  SignalGroupImpl.h  SignalImpl.cpp  SignalImpl.h  SignalMultiplexerValueImpl.cpp  SignalMultiplexerValueImpl.h  SignalTypeImpl.cpp  SignalTypeImpl.h  ValueEncodingDescriptionImpl.cpp  ValueEncodingDescriptionImpl.h  ValueTableImpl.cpp  ValueTableImpl.h
app/libs/eerie_memory/include/: eerie_memory.hpp
app/libs/leap_memory/: CMakeLists.txt
app/libs/leap_memory/include/: leap_memory.hpp
app/libs/muparser/include/: muParserBase.h  muParserDef.h  muParserTokenReader.h
app/libs/muparser/src/: muParserBase.cpp  muParserBytecode.cpp  muParserDLL.cpp  muParserTokenReader.cpp
app/patches/muParser/: base_type_float.patch
app/patches/zephyr/: esp32s3_psram_rodata.patch  http_service_desc_order_fix.patch  log_backend_fs_init.patch
app/src/: main.cpp
app/src/configuration/adc_config/: adc_config.h  adc_config_cbor_decode.c  adc_config_cbor_decode.h  adc_config_cbor_encode.c  adc_config_cbor_encode.h  adc_config_cbor_size.h
app/src/configuration/cbor/: cbor_serializer.h
app/src/configuration/cbor_adc_config/: adc_config_cbor_decode.c  adc_config_cbor_encode.c  adc_config_cbor_encode.h  adc_config_cbor_size.h  cbor_adc_config.h
app/src/configuration/cbor_logging_config/: logging_config_cbor_decode.h  logging_config_cbor_encode.c
app/src/configuration/cbor_schemas/: adc_config.cddl  logging_config.cddl  sensor_config.cddl  system_config.cddl
app/src/configuration/cbor_sensor_config/: cbor_sensor_config.h  sensor_config_cbor_decode.h  sensor_config_cbor_size.h
app/src/configuration/cbor_system_config/: system_config_cbor_decode.c
app/src/configuration/cbor_traits/: adc_config_trait.h  adcs_config_trait.h  logging_config_trait.h  sensors_config_trait.h  system_config_trait.h
app/src/configuration/json/: json_serializer.h
app/src/configuration/logging_config/: logging_config.h  logging_config_cbor_decode.c  logging_config_cbor_decode.h  logging_config_cbor_encode.c  logging_config_cbor_encode.h  logging_config_cbor_size.h
app/src/configuration/sensor_config/: sensor_config.h  sensor_config_cbor_decode.c  sensor_config_cbor_decode.h  sensor_config_cbor_encode.c  sensor_config_cbor_encode.h  sensor_config_cbor_size.h
app/src/configuration/services/: cbor_configuration_service.h  configuration_service.h  configuration_service.hpp  json_configuration_service.h  loaded_config.hpp
app/src/configuration/system_config/: system_config.h  system_config_cbor_decode.c  system_config_cbor_decode.h  system_config_cbor_encode.c  system_config_cbor_encode.h  system_config_cbor_size.h
app/src/controllers/: adc_configuration_controller.cpp  adc_configuration_controller.h  adcs_configuration_controller.cpp  adcs_configuration_controller.h  canbus_controller.cpp  canbus_controller.h  com_polling_controller.cpp  com_polling_controller.h  display_controller.cpp  display_controller.h  logging_controller.cpp  logging_controller.h  sensors_configuration_controller.cpp  sensors_configuration_controller.h  system_configuration_controller.cpp  system_configuration_controller.h
app/src/domain/: CMakeLists.txt
app/src/domain/adc_domain/: CMakeLists.txt  adc.cpp  adc.h  adc_config.h
app/src/domain/device_tree/: adc_dt_info.h  device_tree_setup.cpp  device_tree_setup.h  dt_adc.cpp  dt_adc.h  dt_configurator.cpp  dt_configurator.h  dt_fs.cpp  dt_fs.h  dt_gpio.cpp  dt_gpio.h  dt_modbus.cpp  dt_modbus.h
app/src/domain/http_domain/: CMakeLists.txt
app/src/domain/interface_domain/: interface.cpp  interface.h
app/src/domain/modbus_domain/: modbus.cpp  modbus.h
app/src/domain/system_domain/: system_configuration.h
app/src/domain/user_com_domain/: user_com.cpp  user_com.h  user_com_status_update_task.hpp
app/src/libs/muparser/: CMakeLists.txt
app/src/subsys/adc/: adc.cpp  adc.h  adc_factory.hpp  adc_manager.cpp  adc_manager.h  adc_simulator.h  i_adc.h  i_adc_manager.h
app/src/subsys/canbus/: canbus.cpp  canbus.h  canbus_type.h
app/src/subsys/cfb/: cbf_task.h  cfb.cpp  cfb.h
app/src/subsys/dbc/: dbc.cpp  dbc.h  dbc_message.cpp  dbc_message.h  dbc_test_data.cpp  dbc_test_data.h
app/src/subsys/device_tree/: dt_adc.cpp  dt_adc.h  dt_canbus.cpp  dt_canbus.h  dt_configurator.cpp  dt_display.cpp  dt_display.h  dt_fs.cpp  dt_fs.h  dt_gpio.cpp  dt_gpio.h  dt_modbus.cpp  dt_modbus.h
app/src/subsys/gpio/: gpio.cpp  gpio_factory.hpp  i_gpio.h
app/src/subsys/lua/: lua_wrapper.cpp  lua_wrapper.h
app/src/subsys/mdf/: mdf4_file.cpp  (+6 more)
app/src/threads/: CMakeLists.txt  measurement_processing_thread.cpp  measurement_processing_thread.h
app/src/utilities/: Kconfig  constants.h  expression_evaluator.cpp  expression_evaluator.h
app/src/views/: main_view.cpp  main_view.h
tests/functional/configuration/: CMakeLists.txt  prj.conf  testcase.yaml
tests/functional/controllers/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/unit/domain/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/unit/utilities/: CMakeLists.txt  guid_generator_tests.cpp  prj.conf  testcase.yaml
(+703 files in other folders)
